Prevent chart data from overflowing into other components

--- a/src/components/LiquiditySelector/LiquiditySelector.scss
+++ b/src/components/LiquiditySelector/LiquiditySelector.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex: 1;
   position: relative;
-  overflow: visible;
+  overflow: hidden;
 }
 
 .chart-liquidity {
@@ -11,7 +11,6 @@
   left: 0;
   right: 0;
   bottom: 0;
-  overflow: visible;
 }
 
 .chart-type--advanced {
